--- a/src/app/sangha/sangha.component.html
+++ b/src/app/sangha/sangha.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg subNav" attr.data-bs-theme={{isUnchanged}}>
   <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsangha" aria-controls="navbarsangha" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button> -->
