Minor changes in code.

--- a/src/app/sangha/sangha.component.html
+++ b/src/app/sangha/sangha.component.html
@@ -2,7 +2,7 @@
   <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsangha" aria-controls="navbarsangha" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button> -->
-  <div class="container-fluid" id="navbarsangha" data-bs-theme="light">
+  <div class="container-fluid" id="navbarsangha" attr.data-bs-theme={{isUnchanged}}>
     <ul class="navbar-nav mx-auto z_navbar_sangha">
       <li class="nav-item active">
         <a class="nav-link" href="#">Lineage</a>
